# Entmoot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ENTERPRISE_ROADMAP.md  PLAN.md  README.md  RESILIENCE_ROADMAP.md  config.example.toml
chaos/: README.md  toxiproxy-mesh.sh
chaos/k8s/: networkchaos-latency.yaml  networkchaos-loss.yaml  networkchaos-site-partition.yaml  schedule-partition-matrix.yaml
chaos/scenarios/: partition-heal-reconnect-storm.sh
crates/entmoot-core/: Cargo.toml
crates/entmoot-core/src/: auth.rs  config.rs  lib.rs  quota.rs  schema.rs  staleness.rs  topic.rs
crates/entmoot-node/: Cargo.toml
crates/entmoot-node/examples/: pub.rs  storm_bench.rs  sub.rs
crates/entmoot-node/src/: admission.rs  churn.rs  connection.rs  ctl.rs  health.rs  lib.rs  main.rs  metrics.rs  quota.rs  retained.rs  session.rs
crates/entmoot-node/tests/: churn.rs  client_events.rs  control_center.rs  hardening.rs  hot_reload.rs  jwt_auth.rs  mesh.rs  phase1b.rs  phase1c.rs  quota.rs  resilience.rs  schema.rs  staleness.rs  transport.rs
k8s/: README.md
k8s/base/: entmoot.example.toml  kustomization.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service-client.yaml  service-headless.yaml  serviceaccount.yaml  statefulset.yaml
k8s/overlays/dev/: kustomization.yaml  namespace.yaml  patch-statefulset.yaml
k8s/overlays/production/: kustomization.yaml  namespace.yaml  patch-pdb.yaml  patch-service-client.yaml  patch-statefulset.yaml
k8s/overlays/staging/: kustomization.yaml  namespace.yaml  patch-statefulset.yaml
scripts/: dev-mesh.sh  iperf3-fragmentation-check.sh  mtu-sweep.sh
web/: app.js  index.html  styles.css
